--- a/index.html
+++ b/index.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student Name - Emerging Technology Blog</title>
+     <meta charset="UTF-8">
+     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0"><meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>technology blog</title>
+            <title>Navdeep singh - Emerging Technology Blog</title>
+            <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <h1>Amazing articles i have found.</h1>
+    <h1>My name is Navdeep Singh</h1>
     <h1>Emerging Technologies</h1>
-    <main>
-        <!-- sample of a blog post -->
-        <article>
-            <h2>article title here</h2>
-            <img src="" alt="article alt text here">
-            <a href="">Article link here</a>
-            <time>date goes here</time>
-            <p>Summary of the article and the technology it talks about</p>
-        </article>
-        <!-- end of sample -->
-    </main>
+        <main>
+    <!-- sample of a blog post -->
+            <article>
+                 <h2>Artificial intelligence</h2>
+                <img src="images/AI-Motherboard-scaled.webp" alt="article alt text here">
+                <a href="https://builtin.com/artificial-intelligence/artificial-intelligence-future">Article link here</a>
+                <time>November 11th 2022</time>
+                <p>Artificial intelligence is shaping the future of humanity across nearly every industry. It is already the main driver of emerging technologies like big data, robotics and IoT, and it will continue to act as a technological innovator for the foreseeable future.AI is important because it forms the very foundation of computer learning. Through AI, computers have the ability to harness massive amounts of data and use their learned intelligence to make optimal decisions and discoveries in fractions of the time that it would take humans.</p>
+            </article>
+    <!-- end of sample -->
+        </main>
 </body>
+</html>
 </html>
