--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <article>
                  <h2>Artificial intelligence</h2>
                 <img src="images/AI-Motherboard-scaled.webp" alt="article alt text here">
-                <a href="https://builtin.com/artificial-intelligence/artificial-intelligence-future">Article link here</a>
+                <a href="https://builtin.com/artificial-intelligence/artificial-intelligence-future">Article link here</a><br>
                 <time>November 11th 2022</time>
                 <p>Artificial intelligence is shaping the future of humanity across nearly every industry. It is already the main driver of emerging technologies like big data, robotics and IoT, and it will continue to act as a technological innovator for the foreseeable future.AI is important because it forms the very foundation of computer learning. Through AI, computers have the ability to harness massive amounts of data and use their learned intelligence to make optimal decisions and discoveries in fractions of the time that it would take humans.</p>
             </article>
