--- a/index.html
+++ b/index.html
@@ -17,12 +17,21 @@
         <main>
     <!-- sample of a blog post -->
             <article>
-                 <h2>Artificial intelligence</h2>
-                <img src="images/AI-Motherboard-scaled.webp" alt="article alt text here">
-                <a href="https://builtin.com/artificial-intelligence/artificial-intelligence-future">Article link here</a><br>
+                <h2>Artificial intelligence</h2>
+                <img src="images/AI-Motherboard-scaled.webp" alt="article alt text here" class="center" >
+                <a href="https://builtin.com/artificial-intelligence/artificial-intelligence-future">Future of artificial-intelligence</a><br>
                 <time>November 11th 2022</time>
                 <p>Artificial intelligence is shaping the future of humanity across nearly every industry. It is already the main driver of emerging technologies like big data, robotics and IoT, and it will continue to act as a technological innovator for the foreseeable future.
                     <br>AI is important because it forms the very foundation of computer learning. Through AI, computers have the ability to harness massive amounts of data and use their learned intelligence to make optimal decisions and discoveries in fractions of the time that it would take humans.</p>
+            </article>
+
+            <article>
+                <h2>Datafication</h2>
+                <img src="images/datafication.jpeg" alt="article alt text here" class="center">
+                <a href="https://www.airswift.com/blog/datafication">What is Datafication</a><br>
+                <time>November 18th 2022</time>
+                <p>Datafication is a technological trend turning many aspects of our life into data.This technology was introduced in 2013 by Kenneth Cukier and Viktor Mayer-Schönberger and since then Datafication has developed a lot.<br>
+                Datafication helps businesses improve their products and services by using real-time data. Companies like Insurance, Banks, and sectors like Human resources and Social sciene reseachers use datafication to better their products and services.</p>
             </article>
     <!-- end of sample -->
         </main>
