--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
                 Datafication helps businesses improve their products and services by using real-time data. Companies like Insurance, Banks, and sectors like Human resources and Social sciene reseachers use datafication to better their products and services.</p>
             </article>
     <!-- end of sample -->
+            <article>
+                <h2>Starlink</h2>
+                <img src="images/starlink-satellites-eliminate-wired-internet-1.jpg" alt="Starlink" class="center">
+                <a href="https://www.starlink.com/technology">Starlink Technology</a><br>
+                <time>November 25th 2022</time>
+                <p>Starlink is the world's first and largest satellite constellation using a low Earth orbit to deliver broadband internet capable of supporting streaming, online gaming, video calls and more.<br>
+
+                    Leveraging advanced satellites and user hardware coupled with our deep experience with both spacecraft and on-orbit operations, Starlink delivers high-speed, low-latency internet to users all over the world.<br>
+                    Starlink is a satellite constellation system that aims to deliver global internet coverage. This system is ideally suited for rural and geographically isolated areas where internet connectivity is unreliable or nonexistent.<br> Starlink satellite has a lifespan of approximately five years and SpaceX eventually hopes to have as many as 42,000 satellites in this so-called megaconstellation.</p>
+            </article>
         </main>
 </body>
 </html>
