--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
             <article>
                 <h2>Nanotechnology</h2>
-                <img src="/images/Nanotechnology.webp" alt="Nanotechnology" class="center">
+                <img src="images/Nanotechnology.webp" alt="Nanotechnology" class="center">
                 <a href="https://education.nationalgeographic.org/resource/nanotechnology">Nanotechnology</a><br>
                 <time>December 2nd 2022</time>
                 <p>Nanotechnology involves the understanding and control of matter at the nanometer-scale. The so-called nanoscale deals with dimensions between approximately 1 and 100 nanometers.<BR>It is also known as Nano-tech.<BR>the engineering of small machines that use matter of atomic, molecular and supramolecular scales for industrial purposes. It is the process of manipulating atoms and molecules to manufacture macroscale products or molecular nanotechnology. The development of nanotech and its branches would be the result of a manufacturing revolution, which making impossible thing, the possible.</p>
