--- a/index.html
+++ b/index.html
@@ -52,6 +52,15 @@
                 <time>December 2nd 2022</time>
                 <p>Nanotechnology involves the understanding and control of matter at the nanometer-scale. The so-called nanoscale deals with dimensions between approximately 1 and 100 nanometers.<BR>It is also known as Nano-tech.<BR>the engineering of small machines that use matter of atomic, molecular and supramolecular scales for industrial purposes. It is the process of manipulating atoms and molecules to manufacture macroscale products or molecular nanotechnology. The development of nanotech and its branches would be the result of a manufacturing revolution, which making impossible thing, the possible.</p>
             </article>
+
+            <article>
+                <h2>3D Printing</h2>
+                <img src="images/3d printing.webp" alt="3D Printer" class="center" >
+                <a href="https://www.mistywest.com/posts/emerging-tech-in-3d-printing/">3D Printing</a><br>
+                <time>December 9th 2022</time>
+                <p>3D printing or additive manufacturing is the construction of a three-dimensional object from a CAD model or a digital 3D model. It can be done in a variety of processes in which material is deposited, joined or solidified under computer control, with material being added together, typically layer by layer.</p>
+            </article>
+
         </main>
 </body>
 </html>
